# Multi-Tenant-Chatbot-Module

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  wafaa_test.db
backend/: .env.example  Dockerfile  alembic.ini  collect.txt  pyproject.toml  pytest_result.txt  requirements-dev.txt  requirements.txt  test_output.txt  wafaa_dev.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_channels.py  003_agent_analytics.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  multi_tenant.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  channel.py  channel_config.py  client.py  conversation.py  embedding_usage.py  knowledge.py  knowledge_document.py  message.py  tenant.py  tenant_config.py  user.py
backend/app/schemas/: __init__.py  admin.py  agent_analytics.py  analytics.py  auth.py  channel.py  chat.py  (+5 more)
backend/migrations/: env.py
backend/scripts/: seed_agent_analytics.py  seed_data.py  seed_local.py  test_setup.py
backend/tests/: conftest.py  test_agent_analytics_api.py  test_analytics_api.py  test_auth.py  test_channels_api.py  test_chat_api.py  test_document_processor.py  test_embeddings.py  test_health.py  test_instagram_webhook.py  test_intent_classifier.py  test_knowledge_api.py  test_rag_engine.py  test_sentiment_analyzer.py  test_tenant_isolation.py  test_tenants.py  test_text_chunker.py  test_vector_store.py  test_whatsapp_webhook.py
(+113 files in other folders)
